fix truncated height (use css auto height), optimize expand/collapse transition, infobox collapse icon, infobox media queries

--- a/assets/shared-styles.scss
+++ b/assets/shared-styles.scss
@@ -26,8 +26,8 @@ $nav-white-bg: rgba(#fff, 0.15);
 
 @mixin d-small-text {  // eg. used for infobox text content
     font-size: 16px;
-    letter-spacing: calc(0.08 * 16px);
-    text-shadow: 0 1px 2px rgba(black, 0.25);
+    letter-spacing: calc(0.04 * 16px);
+    text-shadow: 0 1.5px 1.5px rgba(black, 0.25);
 }
 
 @mixin d-super-heading {
